name:                wl-pprint-compat-old
version:             1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            Compatibility between the new/old wl-pprint packages.
description:         See README.md
license:             BSD3
license-file:        ../LICENSE.md
extra-source-files:  ../README.md
author:              Daan Leijen, Max Bolingbroke, Edward Kmett
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==8.0.1

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules: Text.PrettyPrint.Leijen
    ghc-options: -Wall -Wcompat
    hs-source-dirs: src

    build-depends:
          base
        , text
