name:                wl-pprint
version:             1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            The prettyprinter based on the work of Wadler/Leijen.
description:         See README.md
license:             BSD3
license-file:        LICENSE.md
extra-source-files:  README.md
author:              Daan Leijen, Max Bolingbroke, Edward Kmett
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==8.0.1, GHC==7.10.3, GHC==7.10.2, GHC==7.8.4

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules: Data.Text.PrettyPrint.Doc
                   , Data.Text.PrettyPrint.Doc.Render.CommonMark
                   , Data.Text.PrettyPrint.Doc.Render.Html
                   , Data.Text.PrettyPrint.Doc.Render.Text
                   , Data.Text.PrettyPrint.Doc.Render.RenderM
    ghc-options: -Wall
    hs-source-dirs: src
    default-language: Haskell2010
    other-extensions:
          BangPatterns
        , CPP
        , LambdaCase
        , OverloadedStrings

    build-depends:
          base < 127
        , text

    if impl(ghc >= 8.0)
        ghc-options: -Wcompat
    else
        build-depends: semigroups >= 0.1 && < 0.19
    if impl (ghc < 7.10)
        build-depends: void

executable readme-generator
    main-is: app/GenerateReadme.hs
    build-depends:
          base < 127
        , wl-pprint
        , text
    default-language: Haskell2010
    other-extensions: OverloadedStrings
    if impl (ghc < 7.10)
        buildable: False

test-suite doctest
    type: exitcode-stdio-1.0
    hs-source-dirs: test/Doctest
    main-is: Main.hs
    build-depends:
          base < 127
        , doctest >= 0.9
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    if impl (ghc < 7.10)
        buildable: False
        -- Doctest cannot search folders in old versions it seems :-(

benchmark bench
    type:           exitcode-stdio-1.0
    hs-source-dirs: bench
    main-is:        Main.hs
    build-depends:
          base
        , wl-pprint
        , ansi-wl-pprint
        , criterion
        , random
        , text
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    other-extensions: NumDecimals, OverloadedStrings
