name:                wl-pprint
version:             1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            The prettyprinter based on the work of Wadler/Leijen.
description:         See README.md
license:             BSD3
license-file:        LICENSE.md
extra-source-files:  README.md
author:              Daan Leijen, Max Bolingbroke, Edward Kmett, David Luposchainsky
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==8.0.1, GHC==7.10.3, GHC==7.10.2, GHC==7.8.4



source-repository head
    type: git
    location: git://github.com/quchen/prettyprinter.git



library
    exposed-modules:
          Data.Text.Prettyprint.Doc
        , Data.Text.Prettyprint.Doc.Internal
        , Data.Text.Prettyprint.Doc.Internal.Type
        , Data.Text.Prettyprint.Doc.Render.CommonMark
        , Data.Text.Prettyprint.Doc.Render.RenderM
        , Data.Text.Prettyprint.Doc.Render.Text
        , Data.Text.Prettyprint.Doc.Unicode
    ghc-options: -Wall
    hs-source-dirs: src
    default-language: Haskell2010
    other-extensions:
          BangPatterns
        , CPP
        , LambdaCase
        , OverloadedStrings

    build-depends:
          base < 127
        , text

    if impl(ghc >= 8.0)
        ghc-options: -Wcompat
    if impl(ghc < 8.0)
        build-depends: semigroups >= 0.1 && < 0.19
    if impl(ghc < 7.10)
        build-depends: void



executable generate_readme
    main-is: app/GenerateReadme.hs
    build-depends:
          base < 127
        , wl-pprint
        , text
    default-language: Haskell2010
    other-extensions: OverloadedStrings
    if impl (ghc < 7.10)
        buildable: False



test-suite doctest
    type: exitcode-stdio-1.0
    hs-source-dirs: test/Doctest
    main-is: Main.hs
    build-depends:
          base < 127
        , doctest >= 0.9
        , QuickCheck >= 2.7
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    if impl (ghc < 7.10)
        buildable: False
        -- Doctest does not support searching through directories in old versions

test-suite testsuite
    type: exitcode-stdio-1.0
    hs-source-dirs: test/Testsuite
    main-is: Main.hs
    build-depends:
          base
        , wl-pprint

        , pgp-wordlist
        , bytestring
        , tasty
        , tasty-quickcheck
        , text
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
    default-language: Haskell2010



benchmark bench
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    main-is: Main.hs
    build-depends:
          base
        , wl-pprint
        , ansi-wl-pprint
        , criterion
        , random
        , text
        , transformers
        , mtl
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    other-extensions: NumDecimals, OverloadedStrings
